Add apis/{apiId}/documents/{documentId}/content
To avoid presenting large content blobs in the documents listing
